@@ -39,6 +39,7 @@ typedef enum
     MACHINE_POWERBOOK_55,
     MACHINE_POWERBOOK_56,
     MACHINE_POWERBOOK_57,
+    MACHINE_POWERBOOK_61,
     MACHINE_POWERBOOK_63,
     MACHINE_POWERBOOK_64,
     MACHINE_POWERBOOK_65,
