@@ -12,6 +12,7 @@ version 1.2:
 	- wmpomme: adapt to the new DBus notification.
 	- pommed: added support for PowerBook6,4 and nVidia GPUs.
 	- pommed: added support for
+		  + PowerBook6,1: PowerBook G4 12" January 2003
 		  + PowerBook6,5: iBook G4 October 2004
 
 version 1.1:
